--- a/src/components/onlinelearningcomponent.css
+++ b/src/components/onlinelearningcomponent.css
@@ -66,7 +66,7 @@
 
 .learning-card img {
   width: 100%;
-  height: auto;
+  height: 300px;
   border-radius: 10px;
   display: block;
 }
@@ -114,5 +114,8 @@
   .online-learning-component-container .right-arrow {
     display: inline-block;
     cursor: pointer;
+  }
+  .learning-card img {
+    height: 100px;
   }
 }
