--- a/src/pages/AutoSlideCarousel.css
+++ b/src/pages/AutoSlideCarousel.css
@@ -9,6 +9,7 @@
     font-family: "YourFontFamily", sans-serif; /* Replace with your desired font family */
     margin-bottom: 30px;
     margin-top: 40px;
+    margin-left: 30px;
     letter-spacing: 10px;
   }
   
