--- a/src/components/banking.css
+++ b/src/components/banking.css
@@ -2,16 +2,18 @@
 
 .banking-component-container {
   background: linear-gradient(to top, #aaecf8 0%, #ffffff 100%); /* Peach gradient */
-  padding: 15px 5%;
+  padding: 30px;
   position: relative;
 }
 
 .banking-component-container h1 {
-  font-family: "inter";
-  font-size: 35px;
+  font-family: "YourFontFamily", sans-serif; /* Replace with your desired font family */
+  font-size: 24px;
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  letter-spacing: 10px;
+  margin-bottom: 10px;
 }
 
 .banking-component-container .cards {
