--- a/src/components/filterbox.css
+++ b/src/components/filterbox.css
@@ -199,3 +199,17 @@
 .Apply:hover {
   background-color: black;
 }
+
+@media screen and (max-width: 768px) {
+  .box{
+    margin-top: 60px;
+    margin: 0 auto;
+    border: 1px solid #B2BEB5;
+    border-radius: 15px;
+
+    height: 1300px;
+    padding: 10px;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+}
