--- a/src/components/onlinelearningcomponent.css
+++ b/src/components/onlinelearningcomponent.css
@@ -2,17 +2,19 @@
 
 .online-learning-component-container {
   background: linear-gradient(to top, #fff4cf 0%, #ffffff 100%);
-  padding: 15px 5%;
+  padding: 30px;
   position: relative;
   margin-top: 10px;
 }
 
 .online-learning-component-container h1 {
-  font-family: "inter";
-  font-size: 35px;
+  font-family: "YourFontFamily", sans-serif; /* Replace with your desired font family */
+  font-size: 24px;
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  letter-spacing: 10px;
+  margin-bottom: 10px;
 }
 
 .online-learning-component-container .explore-button {
